Canvia teClasse a POST
