# server/src/resolvers/Mutation.js
@@ -112,10 +112,30 @@ const matar = async (parent, args, context) => {
     } else return false
 }
 
+const teClasse = async (parent, args, context) => {
+    console.log(args)
+    const classes = await context.prisma.user({ id: args.id }).horari()
+    const classesDia = classes.filter((value) => value.dia_setmana == args.dia_setmana)
+    for (let i = 0; i < classesDia.length; i++) {
+        if ((args.hora >= (classesDia[i].inici)) && (args.hora <= (classesDia[i].inici + classesDia[i].durada)) && args.aula == classesDia[i].aules) {
+            const m = await context.prisma.user({ id: args.id }).monedes();
+            await context.prisma.updateUser({
+                data: {
+                    monedes: m + 20,
+                },
+                where: { id: args.id }
+            })
+            return true
+        }
+    }
+    return false
+}
+
 module.exports = {
     createUser,
     deleteUser,
     updateLastKnown,
     createGame,
-    matar
+    matar,
+    teClasse
 }
