# server/src/resolvers/Query.js
@@ -18,29 +18,9 @@ const angle = async (parent, args, context) => {
     return angle;
 }
 
-const teClasse = async (parent, args, context) => {
-    const classes = await context.prisma.user({ id: args.id }).horari()
-    const classesDia = classes.filter((value) => value.dia_setmana == args.dia_setmana)
-    for (let i = 0; i < classesDia.length; i++) {
-        console.log(classesDia[i])
-        if ((args.hora >= (classesDia[i].inici)) && (args.hora <= (classesDia[i].inici + classesDia[i].durada)) && args.aula == classesDia[i].aules) {
-            const m = await context.prisma.user({ id: args.id }).monedes();
-            await context.prisma.updateUser({
-                data: {
-                    monedes: m + 20,
-                },
-                where: { id: args.id }
-            })
-            return true
-        }
-    }
-    return false
-}
-
 module.exports = {
     users,
     user,
     locationInRange,
     angle,
-    teClasse
 }
